<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ts_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tsUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ts_user_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ts_user_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsUser" />

    <EditText
        android:id="@+id/tsPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ts_user_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textViewShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ts_user_shop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsPassword" />

    <EditText
        android:id="@+id/tsShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ts_user_shop_hint"
        android:inputType="text"
        android:maxLength="4"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewShop"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tsCheckStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tsShop" />

    <Button
        android:id="@+id/tsCheckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tsShop" />


    <TextView
        android:id="@+id/textViewShopWorking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_working_from"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />


    <Button
        android:id="@+id/buttonOpenDec"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_left"
        app:layout_constraintStart_toEndOf="@+id/textViewShopWorking"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />

    <TextView
        android:id="@+id/shopOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/buttonOpenDec"
        app:layout_constraintTop_toBottomOf="@+id/tsCheckButton" />

    <Button
        android:id="@+id/buttonOpenInc"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_left"
        android:rotation="180"
        app:layout_constraintStart_toEndOf="@+id/shopOpening"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />

    <TextView
        android:id="@+id/textViewShopWorkingTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/shop_working_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/buttonOpenInc"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />



    <Button
        android:id="@+id/buttonCloseDec"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_left"
        app:layout_constraintStart_toEndOf="@+id/textViewShopWorkingTo"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />

    <TextView
        android:id="@+id/shopClosing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="21"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/buttonCloseDec"
        app:layout_constraintTop_toBottomOf="@+id/tsCheckButton" />

    <Button
        android:id="@+id/buttonCloseInc"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_left"
        android:rotation="180"
        app:layout_constraintStart_toEndOf="@+id/shopClosing"
        app:layout_constraintTop_toBottomOf="@id/tsCheckButton" />



    <TextView
        android:id="@+id/textViewBotToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bot_token"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewShopWorking" />

    <EditText
        android:id="@+id/tgBotToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bot_token"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewBotToken"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textViewChatId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_chat_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tgBotToken" />

    <EditText
        android:id="@+id/tgChatId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bot_chat_id"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewChatId"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/tgCheckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tgChatId" />

    <TextView
        android:id="@+id/tgCheckStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tgChatId" />

    <CheckBox
        android:id="@+id/autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/auto_login_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tgCheckButton" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="130dp"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/exitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoLogin" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="130dp"
        android:text="@string/exitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@id/autoLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>